refactor(test): use unmodifiable Stream.toList() #316