@@ -16,7 +16,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -95,7 +94,7 @@ class CertificateTypePersistenceServiceIT
         List<CertificateType> expectedCertificates = getAll()
                 .stream()
                 .filter(ct -> ct.getCertificateKind() == CertificateKind.CERTIFICATE)
-                .collect(Collectors.toList());
+                .toList();
 
         List<CertificateType> all = service.getAll();
 
